--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -52,6 +52,31 @@ spec:
               items:
                 type: string
               type: array
+            autoMtls:
+              description: If set to true, and a given service does not have a corresponding
+                DestinationRule configured, or its DestinationRule does not have TLSSettings
+                specified, Istio configures client side TLS configuration automatically,
+                based on the server side mTLS authentication policy and the availibity
+                of sidecars.
+              type: boolean
+            certificates:
+              description: 'Configures DNS certificates provisioned through Chiron
+                linked into Pilot. The DNS names in this file are all hard-coded;
+                please ensure the namespaces in dnsNames are consistent with those
+                of your services. Example: certificates:   - secretName: dns.istio-galley-service-account     dnsNames:
+                [istio-galley.istio-system.svc, istio-galley.istio-system]   - secretName:
+                dns.istio-sidecar-injector-service-account     dnsNames: [istio-sidecar-injector.istio-system.svc,
+                istio-sidecar-injector.istio-system] +k8s:deepcopy-gen:interfaces=Certificates'
+              items:
+                properties:
+                  dnsNames:
+                    items:
+                      type: string
+                    type: array
+                  secretName:
+                    type: string
+                type: object
+              type: array
             citadel:
               description: Citadel configuration options
               properties:
@@ -87,6 +112,8 @@ spec:
                     fail issuing the certificate.
                   type: string
                 nodeSelector:
+                  type: object
+                podAnnotations:
                   type: object
                 resources:
                   type: object
@@ -136,11 +163,17 @@ spec:
                   type: object
                 configValidation:
                   type: boolean
+                enableAnalysis:
+                  type: boolean
+                enableServiceDiscovery:
+                  type: boolean
                 enabled:
                   type: boolean
                 image:
                   type: string
                 nodeSelector:
+                  type: object
+                podAnnotations:
                   type: object
                 replicaCount:
                   format: int32
@@ -172,6 +205,8 @@ spec:
                       format: int32
                       type: integer
                     nodeSelector:
+                      type: object
+                    podAnnotations:
                       type: object
                     ports:
                       items:
@@ -227,6 +262,8 @@ spec:
                       format: int32
                       type: integer
                     nodeSelector:
+                      type: object
+                    podAnnotations:
                       type: object
                     ports:
                       items:
@@ -289,6 +326,8 @@ spec:
                   type: object
                 pluginImage:
                   type: string
+                podAnnotations:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
@@ -377,6 +416,8 @@ spec:
                   type: boolean
                 nodeSelector:
                   type: object
+                podAnnotations:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
@@ -436,6 +477,8 @@ spec:
                   type: string
                 nodeSelector:
                   type: object
+                podAnnotations:
+                  type: object
                 resources:
                   type: object
                 tolerations:
@@ -458,8 +501,6 @@ spec:
               properties:
                 affinity:
                   type: object
-                enableProtocolSniffing:
-                  type: boolean
                 enableProtocolSniffingInbound:
                   description: If enabled, protocol sniffing will be used for inbound
                     listeners whose port protocol is not specified or unsupported
@@ -479,6 +520,8 @@ spec:
                   format: int32
                   type: integer
                 nodeSelector:
+                  type: object
+                podAnnotations:
                   type: object
                 replicaCount:
                   format: int32
@@ -514,15 +557,13 @@ spec:
                   type: integer
                 nodeSelector:
                   type: object
+                podAnnotations:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
                 resources:
                   type: object
-                sessionAffinityEnabled:
-                  description: Set whether to create a STRICT_DNS type cluster for
-                    istio-telemetry.
-                  type: boolean
                 tolerations:
                   items:
                     type: object
@@ -601,6 +642,11 @@ spec:
                         clientCertificate:
                           type: string
                         mode:
+                          enum:
+                          - DISABLE
+                          - SIMPLE
+                          - MUTUAL
+                          - ISTIO_MUTUAL
                           type: string
                         privateKey:
                           type: string
@@ -621,6 +667,38 @@ spec:
                     port:
                       format: int32
                       type: integer
+                    tcpKeepalive:
+                      properties:
+                        interval:
+                          type: string
+                        probes:
+                          format: int32
+                          type: integer
+                        time:
+                          type: string
+                      type: object
+                    tlsSettings:
+                      properties:
+                        caCertificates:
+                          type: string
+                        clientCertificate:
+                          type: string
+                        mode:
+                          enum:
+                          - DISABLE
+                          - SIMPLE
+                          - MUTUAL
+                          - ISTIO_MUTUAL
+                          type: string
+                        privateKey:
+                          type: string
+                        sni:
+                          type: string
+                        subjectAltNames:
+                          items:
+                            type: string
+                          type: array
+                      type: object
                   type: object
                 envoyStatsD:
                   properties:
@@ -752,6 +830,8 @@ spec:
                   type: array
                 nodeSelector:
                   type: object
+                podAnnotations:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
@@ -784,6 +864,8 @@ spec:
                   type: integer
                 nodeSelector:
                   type: object
+                podAnnotations:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
@@ -802,6 +884,10 @@ spec:
                   type: string
                 resources:
                   type: object
+                sessionAffinityEnabled:
+                  description: Set whether to create a STRICT_DNS type cluster for
+                    istio-telemetry.
+                  type: boolean
                 tolerations:
                   items:
                     type: object
@@ -842,6 +928,25 @@ spec:
                       type: boolean
                   type: object
                 stackdriver:
+                  properties:
+                    debug:
+                      description: enables trace output to stdout.
+                      type: boolean
+                    maxNumberOfAnnotations:
+                      description: The global default max number of annotation events
+                        per span.
+                      format: int32
+                      type: integer
+                    maxNumberOfAttributes:
+                      description: The global default max number of attributes per
+                        span.
+                      format: int32
+                      type: integer
+                    maxNumberOfMessageEvents:
+                      description: The global default max number of message events
+                        per span.
+                      format: int32
+                      type: integer
                   type: object
                 tracer:
                   enum:
@@ -863,6 +968,15 @@ spec:
               description: The domain serves to identify the system with SPIFFE. (default
                 "cluster.local")
               type: string
+            trustDomainAliases:
+              description: ' The trust domain aliases represent the aliases of trust_domain.  For
+                example, if we have  trustDomain: td1  trustDomainAliases: [“td2”,
+                "td3"]  Any service with the identity "td1/ns/foo/sa/a-service-account",
+                "td2/ns/foo/sa/a-service-account",  or "td3/ns/foo/sa/a-service-account"
+                will be treated the same in the Istio mesh.'
+              items:
+                type: string
+              type: array
             useMCP:
               description: Use the Mesh Control Protocol (MCP) for configuring Mixer
                 and Pilot. Requires galley.
@@ -882,6 +996,7 @@ spec:
           required:
           - version
           - mtls
+          - autoMtls
           type: object
         status:
           type: object
