--- a/config/base/rbac/rbac_role.yaml
+++ b/config/base/rbac/rbac_role.yaml
@@ -151,6 +151,17 @@ rules:
   verbs:
   - create
 - apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests
+  - certificatesigningrequests/approval
+  - certificatesigningrequests/status
+  verbs:
+  - update
+  - create
+  - get
+  - delete
+- apiGroups:
   - istio.banzaicloud.io
   resources:
   - istios
@@ -177,6 +188,7 @@ rules:
   - istio.istio.io
   - networking.istio.io
   - rbac.istio.io
+  - security.istio.io
   - scalingpolicy.istio.io
   resources:
   - '*'
