--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.4.0-beta.4"
+  version: "1.4.0"
   mtls: false
   autoMtls: false
   includeIPRanges: "*"
@@ -20,7 +20,7 @@ spec:
     enabled: false
   pilot:
     enabled: true
-    image: "docker.io/istio/pilot:1.4.0-beta.4"
+    image: "docker.io/istio/pilot:1.4.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
@@ -31,10 +31,10 @@ spec:
         memory: 2048Mi
   citadel:
     enabled: true
-    image: "docker.io/istio/citadel:1.4.0-beta.4"
+    image: "docker.io/istio/citadel:1.4.0"
   galley:
     enabled: true
-    image: "docker.io/istio/galley:1.4.0-beta.4"
+    image: "docker.io/istio/galley:1.4.0"
     replicaCount: 1
     enableServiceDiscovery: false
     enableAnalysis: false
@@ -99,13 +99,13 @@ spec:
       enabled: false
   mixer:
     enabled: true
-    image: "docker.io/istio/mixer:1.4.0-beta.4"
+    image: "docker.io/istio/mixer:1.4.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   sidecarInjector:
     enabled: true
-    image: "docker.io/istio/sidecar_injector:1.4.0-beta.4"
+    image: "docker.io/istio/sidecar_injector:1.4.0"
     replicaCount: 1
     rewriteAppHTTPProbe: true
     autoInjectionPolicyEnabled: true
@@ -119,9 +119,9 @@ spec:
           memory: 50Mi
   nodeAgent:
     enabled: false
-    image: "docker.io/istio/node-agent-k8s:1.4.0-beta.4"
+    image: "docker.io/istio/node-agent-k8s:1.4.0"
   proxy:
-    image: "docker.io/istio/proxyv2:1.4.0-beta.4"
+    image: "docker.io/istio/proxyv2:1.4.0"
     accessLogFile: "/dev/stdout"
     accessLogFormat: ""
     accessLogEncoding: "TEXT"
@@ -134,7 +134,7 @@ spec:
         cpu: 2000m
         memory: 1024Mi
   proxyInit:
-    image: "docker.io/istio/proxyv2:1.4.0-beta.4"
+    image: "docker.io/istio/proxyv2:1.4.0"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
