Add stackdriver tracer option

--- a/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
@@ -984,6 +984,7 @@ spec:
                   - zipkin
                   - lightstep
                   - datadog
+                  - stackdriver
                   type: string
                 zipkin:
                   properties:
