--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -978,6 +978,7 @@ spec:
                   - zipkin
                   - lightstep
                   - datadog
+                  - stackdriver
                   type: string
                 zipkin:
                   properties:
