Update samples to contain policy and telemetry settings separately

--- a/config/samples/istio_v1beta1_istio_minimal.yaml
+++ b/config/samples/istio_v1beta1_istio_minimal.yaml
@@ -29,7 +29,9 @@ spec:
       enabled: false
     k8singress:
       enabled: false
-  mixer:
+  policy:
+    enabled: false
+  telemetry:
     enabled: false
   sidecarInjector:
     enabled: false
