--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -97,7 +97,13 @@ spec:
           memory: 256Mi
     k8singress:
       enabled: false
-  mixer:
+  policy:
+    enabled: true
+    image: "docker.io/istio/mixer:1.4.0"
+    replicaCount: 1
+    minReplicas: 1
+    maxReplicas: 5
+  telemetry:
     enabled: true
     image: "docker.io/istio/mixer:1.4.0"
     replicaCount: 1
