add generated yaml changes

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -196,6 +196,8 @@ spec:
                       type: string
                     enabled:
                       type: boolean
+                    labels:
+                      type: object
                     loadBalancerIP:
                       type: string
                     maxReplicas:
@@ -253,6 +255,8 @@ spec:
                       type: string
                     enabled:
                       type: boolean
+                    labels:
+                      type: object
                     loadBalancerIP:
                       type: string
                     maxReplicas:
