Add mgw CRD creation to Kustomize

--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
 - base/crds/istio_v1beta1_istio.yaml
 - base/crds/istio_v1beta1_remoteistio.yaml
+- base/crds/istio_v1beta1_meshgateway.yaml
 - base/manager/namespace.yaml
