add CRD and RBAC changes

--- a/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
@@ -202,6 +202,8 @@ spec:
                       type: string
                     enabled:
                       type: boolean
+                    labels:
+                      type: object
                     loadBalancerIP:
                       type: string
                     maxReplicas:
@@ -259,6 +261,8 @@ spec:
                       type: string
                     enabled:
                       type: boolean
+                    labels:
+                      type: object
                     loadBalancerIP:
                       type: string
                     maxReplicas:
