--- a/deploy/charts/istio-operator/templates/meshgateway-crd.yaml
+++ b/deploy/charts/istio-operator/templates/meshgateway-crd.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.istioVersion "1.4" }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -133,3 +134,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
