--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -299,6 +299,8 @@ spec:
                   type: string
                 resources:
                   type: object
+                useMetadataExchangeFilter:
+                  type: boolean
               type: object
             proxyInit:
               description: Proxy Init configuration options
