--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -723,6 +723,8 @@ spec:
                   type: object
                 image:
                   type: string
+                lifecycle:
+                  type: object
                 logLevel:
                   description: 'Log level for proxy, applies to gateways and sidecars.
                     If left empty, "warning" is used. Expected values are: trace|debug|info|warning|error|critical|off'
