--- a/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
@@ -729,6 +729,8 @@ spec:
                   type: object
                 image:
                   type: string
+                lifecycle:
+                  type: object
                 logLevel:
                   description: 'Log level for proxy, applies to gateways and sidecars.
                     If left empty, "warning" is used. Expected values are: trace|debug|info|warning|error|critical|off'
@@ -749,6 +751,8 @@ spec:
                   type: string
                 resources:
                   type: object
+                useMetadataExchangeFilter:
+                  type: boolean
               type: object
             proxyInit:
               description: Proxy Init configuration options
