add TLS support for Zipkin tracing endpoint

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -991,6 +991,29 @@ spec:
                         in the same namespace as the other istio components.
                       pattern: ^[^\:]+:[0-9]{1,5}$
                       type: string
+                    tlsSettings:
+                      description: TLS setting for Zipkin endpoint.
+                      properties:
+                        caCertificates:
+                          type: string
+                        clientCertificate:
+                          type: string
+                        mode:
+                          enum:
+                          - DISABLE
+                          - SIMPLE
+                          - MUTUAL
+                          - ISTIO_MUTUAL
+                          type: string
+                        privateKey:
+                          type: string
+                        sni:
+                          type: string
+                        subjectAltNames:
+                          items:
+                            type: string
+                          type: array
+                      type: object
                   type: object
               type: object
             trustDomain:
