--- a/deploy/charts/istio-operator/Chart.yaml
+++ b/deploy/charts/istio-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: istio-operator
-version: 0.0.32
+version: 0.0.33-dev.1
 description: istio-operator manages Istio deployments on Kubernetes
 sources:
   - https://github.com/banzaicloud/istio-operator
