Gateway address discover refactor - it is moved to the MeshGateway resource

--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -19,6 +19,10 @@ spec:
     description: Status of the resource
     name: Status
     type: string
+  - JSONPath: .status.GatewayAddress
+    description: Ingress gateways of the resource
+    name: Gateways
+    type: string
   - JSONPath: .status.errorMessage
     description: Error message
     name: Error
