--- a/config/base/crds/istio_v1beta1_meshgateway.yaml
+++ b/config/base/crds/istio_v1beta1_meshgateway.yaml
@@ -20,7 +20,7 @@ spec:
     name: Status
     type: string
   - JSONPath: .status.GatewayAddress
-    description: Ingress gateways of the resource
+    description: Ingress gateway addresses of the resource
     name: Ingress IPs
     type: string
   - JSONPath: .status.ErrorMessage
