--- a/deploy/charts/istio-operator/templates/operator-remoteistio-1.4-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-remoteistio-1.4-crd.yaml
@@ -22,8 +22,8 @@ spec:
     name: Error
     type: string
   - JSONPath: .status.GatewayAddress
-    description: Ingress gateways of the resource
-    name: Gateways
+    description: Ingress gateway addresses of the resource
+    name: Ingress IPs
     type: string
   - JSONPath: .metadata.creationTimestamp
     name: Age
@@ -415,6 +415,15 @@ spec:
           - enabledServices
           type: object
         status:
+          properties:
+            ErrorMessage:
+              type: string
+            GatewayAddress:
+              items:
+                type: string
+              type: array
+            Status:
+              type: string
           type: object
   version: v1beta1
 status:
