--- a/deploy/charts/istio-operator/templates/meshgateway-crd-1.4.yaml
+++ b/deploy/charts/istio-operator/templates/meshgateway-crd-1.4.yaml
@@ -22,11 +22,15 @@ spec:
     description: Type of the service
     name: Service Type
     type: string
-  - JSONPath: .status.status
+  - JSONPath: .status.Status
     description: Status of the resource
     name: Status
     type: string
-  - JSONPath: .status.errorMessage
+  - JSONPath: .status.GatewayAddress
+    description: Ingress gateway addresses of the resource
+    name: Ingress IPs
+    type: string
+  - JSONPath: .status.ErrorMessage
     description: Error message
     name: Error
     type: string
@@ -120,12 +124,14 @@ spec:
           type: object
         status:
           properties:
-            errorMessage:
+            ErrorMessage:
               type: string
-            status:
+            GatewayAddress:
+              items:
+                type: string
+              type: array
+            Status:
               type: string
-          required:
-          - status
           type: object
   version: v1beta1
 status:
