--- a/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.4-crd.yaml
@@ -86,6 +86,12 @@ spec:
             citadel:
               description: Citadel configuration options
               properties:
+                additionalContainerArgs:
+                  description: If present will be appended at the end of the initial/preconfigured
+                    container arguments
+                  items:
+                    type: string
+                  type: array
                 affinity:
                   type: object
                 caSecretName:
@@ -165,6 +171,12 @@ spec:
             galley:
               description: Galley configuration options
               properties:
+                additionalContainerArgs:
+                  description: If present will be appended at the end of the initial/preconfigured
+                    container arguments
+                  items:
+                    type: string
+                  type: array
                 affinity:
                   type: object
                 configValidation:
@@ -413,6 +425,12 @@ spec:
             mixer:
               description: Mixer configuration options
               properties:
+                additionalContainerArgs:
+                  description: If present will be appended at the end of the initial/preconfigured
+                    container arguments
+                  items:
+                    type: string
+                  type: array
                 affinity:
                   type: object
                 checksEnabled:
@@ -516,6 +534,12 @@ spec:
             pilot:
               description: Pilot configuration options
               properties:
+                additionalContainerArgs:
+                  description: If present will be appended at the end of the initial/preconfigured
+                    container arguments
+                  items:
+                    type: string
+                  type: array
                 affinity:
                   type: object
                 enableProtocolSniffingInbound:
@@ -787,6 +811,12 @@ spec:
             sidecarInjector:
               description: SidecarInjector configuration options
               properties:
+                additionalContainerArgs:
+                  description: If present will be appended at the end of the initial/preconfigured
+                    container arguments
+                  items:
+                    type: string
+                  type: array
                 affinity:
                   type: object
                 alwaysInjectSelector:
